--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ topics:
 
   - name: Play Framework
     web_url: https://github.com/topics/playframework
-    image_url: https://www.playframework.com/assets/images/logos/3740142a5b6d7e5c73afc223f837c2ed-play_full_color.png
+    image_url: https://c7.uihere.com/files/232/357/86/play-framework-scala-software-framework-java-web-application-play-again-thumb.jpg
 
   - name: Electron
     web_url: https://github.com/topics/electron
