--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ topics:
 
   - name: Play Framework
     web_url: https://github.com/topics/playframework
-    image_url: https://c7.uihere.com/files/232/357/86/play-framework-scala-software-framework-java-web-application-play-again-thumb.jpg
+    image_url: https://www.playframework.com/assets/images/logos/1d627942f0b2f115f8638936a212244a-play_icon_full_color.png
 
   - name: Electron
     web_url: https://github.com/topics/electron
